# balls

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVPLAN.md  LICENSE  Makefile  README.md  SKILL.md  release-plz.toml
.ball/: config.json
.ball/tasks/: bl-158d.json  bl-202a.json  bl-276f.json  bl-36b1.json  bl-451a.json  bl-551b.json  bl-5721.json  bl-59ab.json  bl-5bd9.json  bl-60cf.json  bl-8615.json  bl-9707.json  bl-a6bb.json  bl-b1df.json  bl-dbf3.json  bl-e839.json  bl-f231.json  bl-fb6e.json
.balls/: config.json
.balls/plugins/: github-issues.json  github.json
.balls/tasks/: bl-00ca.json  bl-00ef.json  bl-0105.json  bl-0151.json  bl-0151.notes.jsonl  bl-0169.json  bl-01d7.json  bl-01d7.notes.jsonl  bl-01f3.json  bl-0201.json  bl-022c.json  bl-022c.notes.jsonl  bl-0242.json  bl-02c3.json  bl-02c3.notes.jsonl  bl-030e.json  bl-0341.json  bl-039a.json  bl-039a.notes.jsonl  bl-03fd.json  bl-04ed.json  bl-04ed.notes.jsonl  bl-0505.json  bl-0512.json  bl-0512.notes.jsonl  bl-052e.json  bl-054c.json  bl-054c.notes.jsonl  bl-0552.json  bl-05e5.json  bl-05e5.notes.jsonl  bl-05f9.json  bl-05f9.notes.jsonl  bl-0601.json  bl-0601.notes.jsonl  bl-06d9.json  bl-06d9.notes.jsonl  bl-0802.json  bl-0802.notes.jsonl  bl-085f.json  (+796 more)
.github/workflows/: ci.yml  release-plz.yml
config/: balls.toml  plugins.toml
default-config/: plugins.toml
docs/: SPEC-clone-layout.md  SPEC-federated-state.md  SPEC-forge-gated-delivery.md  SPEC-lifecycle-sync-participants.md  SPEC-orphan-branch-state.md  SPEC-tracker-state.md  SPEC-workspace-layout.md  architecture.md  audit-test-coverage-honesty.md  demonstration.md  migration-runbook.md  mutation-pass-2026-06.md  release-0.5.0-checklist.md  release-notes-greenfield.md  security-review-subprocess-git-paths.md
docs/design/: bl-9df0-stealth-lock.md  bl-c3c0-lagging-clone.md  bl-chore.md  bl-e614-import.md
docs/e2e/: bl-1b49-multi-agent-parallel-claims.md  bl-53b7-forge-gated-delivery.md  bl-7911-greenfield-solo-lifecycle.md  bl-9a62-degradation.md  bl-d234-federation.md  bl-d754-adoption-migration.md
docs/reviews/: bl-1a66-arch-conformance.md  minimalism.md
scripts/: check-coverage.sh  check-line-lengths.sh  install-hooks.sh  migrate-legacy.py  pre-commit
scripts/e2e/: bl-1b49-driver.sh
src/: adopt.rs  adopt_tests.rs  archive_recovery.rs  archive_recovery_tests.rs  archived_child.rs  bare_squash.rs  bare_squash_tests.rs  change.rs  change_create.rs  change_create_tests.rs  change_field.rs  change_tests.rs  checkout.rs  checkout_args.rs  checkout_tests.rs  chore.rs  chore_cli.rs  chore_cli_tests.rs  chore_tests.rs  civil.rs  civil_tests.rs  claim_push.rs  claim_push_tests.rs  claim_sync.rs  claim_sync_tests.rs  cli.rs  cli_command.rs  cli_sub.rs  clone_breadcrumb.rs  clone_breadcrumb_tests.rs  clone_json.rs  clone_json_tests.rs  commit_msg.rs  commit_policy.rs  commit_policy_tests.rs  conf.rs  conf_resolve.rs  conf_tests.rs  conf_write.rs  conf_write_tests.rs  (+265 more)
src/commands/: basic.rs  claim.rs  completions.rs  dep_link.rs  doctor.rs  half_push.rs  id_gen.rs  init.rs  lifecycle.rs  migrate.rs  mod.rs  plugin.rs  plumbing.rs  prime_status.rs  ready_cmd.rs  remaster.rs  repair.rs  sync.rs  sync_bounds.rs  sync_report.rs  sync_review.rs  update.rs  (+1 more)
tasks/: bl-004c.md  bl-0100.md  bl-0161.md  bl-03a1.md  bl-07d6.md  bl-0a23.md  bl-0a80.md  bl-0a81.md  bl-0af4.md  bl-0bd1.md  bl-0da0.md  bl-0e16.md  bl-0ef9.md  bl-10a4.md  bl-11ae.md  bl-1280.md  bl-185a.md  bl-189b.md  bl-1921.md  bl-19c4.md  bl-1a66.md  bl-1b49.md  bl-1ce7.md  bl-1d9b.md  bl-1e98.md  bl-2013.md  bl-21f1.md  bl-22dd.md  bl-23ac.md  bl-23eb.md  bl-2546.md  bl-256b.md  bl-25e8.md  bl-2656.md  bl-27bf.md  bl-2866.md  bl-292d.md  bl-2a81.md  bl-2b46.md  bl-2b95.md  (+153 more)
tests/: agent_lifecycle.rs  bare_discovery.rs  bare_hex_ids.rs  bare_squash.rs  bl_chore.rs  bl_tracker.rs  chore_e2e.rs  claim.rs  claim_sync.rs  close_delivered_repo.rs  close_drop.rs  close_drop_review.rs  close_resolve_remote.rs  closed_view.rs  commit_message_shape.rs  completions.rs  concurrent_writes.rs  conformance_config.rs  conformance_federated.rs  conformance_migrate.rs  conformance_migrate_dirty.rs  conformance_migrate_renames.rs  conformance_model.rs  conformance_moved_clone.rs  conformance_prime_migrate.rs  conformance_reach.rs  conformance_remaster.rs  conformance_state_branch.rs  conformance_xdg_init.rs  conformance_xdg_init_paths.rs  conformance_xdg_layout.rs  coverage_claim.rs  coverage_read.rs  coverage_write.rs  create_list.rs  delivered_repo.rs  delivery.rs  delivery_remote.rs  dispatch.rs  display_smoke.rs  (+77 more)
(+76 files in other folders)
