[package]
name = "balls"
version = "0.4.2"
edition = "2021"
description = "Git-native task tracker for parallel agent workflows"
license = "MIT"
repository = "https://github.com/mudbungie/balls"
readme = "README.md"
keywords = ["git", "task-tracking", "agent", "workflow", "cli"]
categories = ["development-tools", "command-line-utilities"]
exclude = [".balls", "scripts", "tests"]

[lib]
name = "balls"
path = "src/lib.rs"

[[bin]]
name = "bl"
path = "src/main.rs"

# Greenfield rewrite: runtime deps are added per phase as the architecture
# needs them (YAML frontmatter, git plumbing, CLI parsing, ...). The skeleton
# is std-only.
[dependencies]
# §3 task schema: markdown + YAML frontmatter, with unknown-key round-trip.
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10" # maintained fork of the deprecated serde_yaml.
# §7 plugin wire: payloads are serialized to plugin stdin as JSON.
serde_json = "1"
# § id generation: system entropy for the one shipped (random) generator.
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
