[package]
name = "balls"
version = "0.5.4"
edition = "2021"
# MSRV: bound by `io::ErrorKind::ExecutableFileBusy` (src/plugin.rs),
# stabilized in 1.83. Declared, not pinned via rust-toolchain — a floor for
# consumers, not a ceiling on the build toolchain. Verified by clippy's
# `incompatible_msrv` lint under the `check` gate.
rust-version = "1.83"
description = "Git-native task tracker for parallel agent workflows"
license = "MIT"
repository = "https://github.com/mudbungie/balls"
readme = "README.md"
keywords = ["git", "task-tracking", "agent", "workflow", "cli"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["scripts", "tests"]

[lib]
name = "balls"
path = "src/lib.rs"

[[bin]]
name = "bl"
path = "src/main.rs"

# §11 delivery / worktree plugin — a SIBLING binary, shipped in-repo as a
# default capability + reference impl, dispatched subprocess-uniform like any
# third party (§6). Owns the `work/<id>` code worktree end to end.
[[bin]]
name = "bl-delivery"
path = "src/bin/bl-delivery.rs"

# Greenfield rewrite: runtime deps are added per phase as the architecture
# needs them (YAML frontmatter, git plumbing, CLI parsing, ...). The skeleton
# is std-only.
[dependencies]
# §3 task schema + §4 config: one serialization format, TOML, with unknown-key
# round-trip. Pure-Rust (no C libyaml); exports losslessly to JSON for tooling.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# §7 plugin wire: payloads are serialized to plugin stdin as JSON.
serde_json = "1"
# § id generation: system entropy for the one shipped (random) generator, and
# the change-worktree token (src/mutate.rs reuses the same IdScheme). DELIBERATE
# dep, NOT std-replaceable: std exposes no portable entropy source, and a
# SystemTime/PID substitute is predictable + collision-prone, defeating the
# unbiased rejection-sampling id mint. Demarcated, not removed (footprint rule).
getrandom = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
